fixed spacing of contact area on home page

--- a/css/index.css
+++ b/css/index.css
@@ -250,6 +250,7 @@ header img {
 
 #contact p {
     max-width: 70%;
+    margin: auto;
 }
 
 footer {
